Add: 개발자의 글쓰기 추가

--- a/book-review/개발자의글쓰기/1.md
+++ b/book-review/개발자의글쓰기/1.md
@@ -2,5 +2,13 @@
 
 > 기획자나 관리자의 글쓰기에 논리력, 설득력, 실행력이 중요하다면, 개발자의 글쓰기에는 정확성, 간결성, 가독성이 중요하다. - p20
 > 	개발자가 주로 쓰는글은 클래스, 함수, 이름, 주석 에러 메시지 릴리스문서, 개발 가이드 등이다.
-> 
+> 	문제는 정확성, 간결성, 가독성이라는 개념이 서로 상충된다.
+
+- 코드작성에대해서 글쓰기라고 한몫에 나와서 당황스럽다.
+
+# 문장과 단락을 구조화하는 법
+
+## 문장을 구조화 하는 법
+1. 핵심적인 주제를 쓰고 부가 설명을 하라.
+2. 첫 문장의 주어를 가져다가 소제목으로 만들면 자연스럽게 문단을 구성할 수 있다.
 
