--- a/notes/literature-notes/testing-library/3.md
+++ b/notes/literature-notes/testing-library/3.md
@@ -52,3 +52,10 @@ React Testing Library에 대하여
 
 테스팅라이브러리는 요소를 찾는법도 완고하다.
 스크린 리더와 같은 기술로 요소를 찾기를 권장한다.
+
+유닛 테스팅 함수들
+
+- 기능 테스트가 너무 복잡할때
+- 엣지 케이스가 너무 많을때
+
+describe는 테스트를 그룹화 할때 사용
