--- a/browser/1.md
+++ b/browser/1.md
@@ -138,3 +138,56 @@ Gecko에는 HTML과 DOM트리의 사이에 추가 레이어가 있다. "content 
 
 ## 변환
 
+대부분의 경우 최종적으로 생성되는 것은 파싱 트리가 아니다. 파싱은 변환(입력된 문서를 다른 형식으로 변환하는것)에도 자주 사용된다.
+
+예로 컴파일이 있다.
+
+소스 코드를 기계 코드로 컴파일하는 컴파일러에서는 처음에 소스 코드를 해석하고 파싱 트리를 작성하고 다음으로 파싱 트리를 기계 코드 문서로 변환한다.
+
+소스코드 -> 파싱 -> 파싱트리 -> 변환 -> 기계코드
+
+## 파싱의 예
+
+간단한 수학적 언어를 정의하고 분석 처리를 해보자.
+
+어휘 : 이 언어에서는 정수와 플러스 기호 마이너스 기호가 있다.
+
+구문
+
+1. 이 언어의 구문 구성요소는 식, 항, 연산이다.
+2. 이 언어에는 식을 몇가지라도 포함할 수 있다.
+3. 항 뒤에 연산이 이어 다른 항이 계속된 것을 식이라고 정의한다.
+4. 연산은 플러스 토큰 또는 마이너스 토큰이다.
+5. 항은 정수 토큰이나 음식이다.
+
+2 + 3 - 1 이 있다고 해보자.
+룰에 일치하는 최초의 문자열 2는 규칙 5에 따르면 항이라고 불린다.
+
+2번째로 일치하는 것은 2 + 3이다.
+
+항 후에 연산이 이어 다른 규정이 계속되고 있으니, 규칙 3에 일치한다.
+
+다음 일치를 입력의 끝까지 가면 2 + 3 - 1이 식이 된다.
+
+이미 2+ 3 이 항이라는 것을 알고 있기에 항 후에 연산이 이어 다른 규정이 계속되고 있게 된다.
+
+2 + + 라는 게 있다면 어떤 규정에도 속할 수 없기 때문에 무효인 입력이 된다.
+
+## 어휘와 구문의 공식 정의
+
+통상, 어휘는 정규 표현으로 나타낸다.
+
+예를들어 다음과 같이 정의된다.
+
+`INTEGER:0|[1-9][0-9]*PLUS: +MINUS: -`
+
+정수는 정규 표현으로 정의되어 있다.
+
+구문은 통상 BNF형식으로 정의한다. 샘플은 다음과 같다.
+
+`expression:=term  operation  term
+operation:=PLUS|MINUS
+term:=INTEGER|expression`
+
+## 파서 종류
+
